// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppErrorRow should render 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
    >
      <div
        class="message"
      >
        <b
          class="mr-2"
        >
          Test error
        </b>
        <button
          aria-disabled="false"
          class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
          title="More details"
          type="button"
        >
          <span
            class="ui-button-content-cef1"
          >
            <i
              class="material-icons icon"
            >
              expand_more
            </i>
          </span>
        </button>
      </div>
      <span
        class="text-faded"
      >
        <span
          id="datetime-tooltip-1"
        >
          01/17/2022
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`AppErrorRow should render without a payload 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="info"
    >
      <div
        class="message"
      >
        <b
          class="mr-2"
        >
          Test error
        </b>
      </div>
      <span
        class="text-faded"
      >
        <span
          id="datetime-tooltip-2"
        >
          01/17/2022
        </span>
      </span>
    </div>
  </div>
</div>
`;
